
    * Support NICKSERV and CHANSERV commands when tracking messages.

    * Handle incomplete PREFIX lines. (#192)

    * Re-open log files when HUP signal is received to allow 
      rotation. (#183)

    * Avoid writing nick changes and quits to nick-specific files
      when not in a query with a user. (#173)

    * Fix occasional repeating of lines. (#75)

	* Fix outgoing SSL connections. (#128)

  INTERNALS

    * A simple, single API is now used for managing modes.

Ctrlproxy 3.0.5 2007-12-07

  IMPROVEMENTS
  
    * Integrate auto-away module into the core.

    * New settings ``autosave'', ``replication'', ``learn-nickserv'', 
      ``learn-network-name'', ``admin-log'', ``admin-user''.

    * Warn about unknown configuration file settings. (#15)

    * Support prefixing all lines with the time ("report-time = always"). (#169)

    * Allow using expansions in log file names for irssi. (#149)

  BUG FIXES

    * Handle 275 response correctly.

    * Fix memory error. (#170)

    * Fix several memory leaks.

Ctrlproxy 3.0.4 2007-11-24

  IMPROVEMENTS

    * Add ctrlproxy-admin command for command-line access to the admin network.

    * Send message to the client when ctrlproxy connects to the network.

    * Announce number of clients/channels during client login. (#162)

    * Add "set" command in the administration interface, including 
      initial settings "log_level", "motd-file" and "report-time". (#6)

    * Add "default-network" setting.

  BUG FIXES
    
    * Don't allow disconnect of admin network. (#164)

    * Clearer error messages during disconnect.

    * Handle ping timeouts from server. (#158)

    * Don't crash when network of listener goes away. (#168)

    * Don't abort when sending colon to listener. (#167)

    * Handle 263 response correctly.

    * Properly send non-data lines when using repl_lastdisconnect. (#146)

    * No longer "skip" users on reconnect. (#146)

    * Check for empty argument to /CTRLPROXY BACKLOG (#132)
